--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,9 @@
-* {
-    /* padding and border will be same across different browsers */
-     
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+* { 
+  
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
      } 
    
      body {
@@ -22,12 +20,12 @@
        }
       
        .navbar {
+        display: flex;
        width: 100%;
-       padding: 10px;
+       padding: 2px;
        position: fixed;
        top: 0;
        left: 0;
-       display: flex;
        justify-content: space-between;
        align-items: center;
        background: #1a1a1a;
@@ -41,18 +39,18 @@
    
        .link-group {
       list-style: none;
+      display: flex;
       margin: 0;
       padding: 0;
        }
    
-       .link-li {
+       li {
        list-style:none;
         }
    
         a {
       text-decoration: none;
        }
-   
       .logo {
         font-size: 25px;
       }
@@ -70,16 +68,16 @@
      transition: 0.3s ease;
      }
    
-     menu li {
+     .menu li {
      padding: 5px 14px;
      }
      
-     <!--Checkbox-->
-     input [type=checkbox]:checked ~ .menu { 
-     display: inline-block;
+     /*CHECKBOX*/
+     input[type=checkbox] {
+      display:none;
      }
    
-     <!--Hamburger Menu-->
+     /*Hamburger Menu*/
      .hamburger{
      display: block;
      font-size: 24px;
@@ -97,71 +95,74 @@
      text-align: center;
      padding: 16px 0px;
        }
-         }
-     
          .menu li + li {
         margin-top: 12px;
         }
-   
-     .about-section {
-      padding: 50px;
-      text-align: center; 
-      color: white;
-       }
-        <!--APPLYING SECTION QUERIES-->
+
+        input [type=checkbox]:checked ~ .menu { 
+          display: inline-block;
+        }     
+      }
+    
+        /*APPLYING SECTION QUERIES*/
+
       .about-section {
        width: 100%;
-       height: 50px;
+       height: 100vh;
+       padding:0 150px;
        display: flex;
        align-items: center;
        position: fixed;
-       top: 20px;
+       top: 0;
        opacity: 0;
        transition: 1s;
        
        }
-   
-      .hero-heading{
-       color: #fff;
-       font-size: 70px;
-       text-transform: capitalize;
-       font-weight: 60px;
-       top:90px;
-       text-shadow:2px 1px yellow;			
-        }
-   
+       .hero-heading{
+        color: #fff;
+        font-size: 120px;
+        text-transform: capitalize;
+        font-weight: 300;
+        text-shadow:0 0 10px gold, 0 0 20px firebrick, 0 0 40px pink, 0 0 80px red ;			
+      }   
+      
        .about-img{
        position: absolute;
-       top: 90px;
+       top: 75px;
        right: 0;
-       height: 120vh;
-       width: 30%;
+       height: 100vh;
+       width: 40%;
        object-fit: cover;
        opacity: 0.2;
         }
+
       .about-info{
        color: #fff;
        opacity: 0.6;
-       line-height: 40px;
+       line-height: 50px;
        font-size: 30px;
           } 
-    About.active, 
-    project.active, 
-    experience.active, 
-    connect.active {
+    .about-section.active, 
+    .experience-section.active,
+    #skillSec.active,
+    #project.active,
+    .message-section.active,
+    .connect-section.active{
     position: relative;
     opacity: 1;
     z-index: 8;
     }
-
+/*EXPERIENCE*/
       .h1-section{
          text-decoration:underline;
-          text-shadow:2px 1px yellow;
-          padding: 15px;
+          text-shadow: 0 0 10px gold, 0 0 20px firebrick, 0 0 40px pink, 0 0 80px red;
+          padding:15px;
+          
         } 
         ol li{
     list-style:none;
     }
+/*SKILL SECTION*/
    #skillSec li{
    display:inline-block;
    width:200px;
@@ -198,13 +199,13 @@
     }
     .h2-project{
       text-decoration:underline;
-       text-shadow:2px 1px yellow;
+       text-shadow:0 0 10px gold, 0 0 20px firebrick, 0 0 40px pink, 0 0 80px red;
        padding: 15px;
      }
     /*Form*/
    .h2-message {
     text-decoration:underline;
-          text-shadow:2px 1px yellow;
+          text-shadow:0 0 10px gold, 0 0 20px firebrick, 0 0 40px pink, 0 0 80px red;
           padding: 20px;
    }
    .message-section{
@@ -213,7 +214,7 @@
     grid-gap: 50px;
     transition: 1s;
     height: 100vh;
-    padding:100px 150px;
+    padding:100px;
    }
 
 /* Makes responsive fields. Sets size and field alignment.*/
