--- a/css/index.css
+++ b/css/index.css
@@ -18,8 +18,15 @@
        color:white;
        font-size: 25px;
        }
+       a {
+        text-decoration: none;
+         }
+        
+         li {
+          list-style:none;
+           }
       
-       .navbar {
+      #navbar {
         display: flex;
        width: 100%;
        padding: 2px;
@@ -31,119 +38,121 @@
        background: #1a1a1a;
        color: #fff;
        }
-   
-       .nav-links a {
+        
+       #menu a {
        text-decoration:none;
        color: #fff;
        }
    
-       .link-group {
-      list-style: none;
-      display: flex;
-      margin: 0;
-      padding: 0;
-       }
-   
-       li {
-       list-style:none;
-        }
-   
-        a {
-      text-decoration: none;
-       }
-      .logo {
+       .logo {
         font-size: 25px;
+      } 
+              
+      /* NAVBAR MENU*/
+   
+      #menuToggle
+       {
+        display: flex;
+        gap: 1em;
+       font-size: 18px;
       }
-   
-     .menu{
-     display:flex;
-     gap: 1em;
-     font-size: 18px;
-     }
-   
-     .menu li:hover{
-     display:inline-block;
-     background-color: #4c9e9e;
-     border-radius: 5px;
-     transition: 0.3s ease;
-     }
-   
-     .menu li {
-     padding: 5px 14px;
-     }
-     
-     /*CHECKBOX*/
-     input[type=checkbox] {
-      display:none;
-     }
-   
-     /*Hamburger Menu*/
-     .hamburger{
-     display: block;
-     font-size: 24px;
-     user-select: none;
+      
+      #menuToggle li:hover 
+      {
+        background-color: #4c9e9e;
+        border-radius: 5px;
+        color: tomato;
+        transition: color 0.3s ease;
       }
-   
-     /* APPLYING MEDIA QUERIES */
-     @media (max-width: 768px) {
-     .menu {
-     display: none;
-     position: absolute;
-     background-color: teal;
-     right: 0;
-     left: 0;
-     text-align: center;
-     padding: 16px 0px;
+      
+      #menuToggle li
+      {
+        padding: 5px 14px;
+      }
+
+      /*RESPONSIVE NAVBAR MENU STARTS*/
+      /* CHECKBOX HACK */
+     input[type=checkbox]{
+       display: none;
        }
-         .menu li + li {
-        margin-top: 12px;
-        }
 
-        input [type=checkbox]:checked ~ .menu { 
-          display: inline-block;
-        }     
-      }
-    
-        /*APPLYING SECTION QUERIES*/
+ /*HAMBURGER MENU*/
+ .hamburger {
+  display: none;
+  font-size: 24px;
+  user-select: none;
+ }
+   /* APPLYING MEDIA QUERIES */
+      @media (max-width: 768px) {
+  #menuToggle { 
+   display:none;
+   position: absolute;
+   background-color:teal;
+   right: 0;
+   left: 0;
+   text-align: center;
+   padding: 16px 0;
+  }
+}
 
-      .about-section {
+#menuToggle li:hover {
+  display: inline-block;
+  background-color:#4c9e9e;
+  transition: 0.3s ease;
+ }
+ #menuToggle li + li {
+  margin-top: 12px;
+ }
+ input[type=checkbox]:checked ~ #menuToggle{
+  display: block;
+ }
+ .hamburger {
+  display: block;
+ }
+
+ /*APPLYING SECTION QUERIES*/
+
+  .about-{
        width: 100%;
-       height: 100vh;
+        height: 100vh;
        padding:0 150px;
        display: flex;
        align-items: center;
        position: fixed;
        top: 0;
        opacity: 0;
-       transition: 1s;
-       
+       transition: 1s;       
        }
+         
+
        .hero-heading{
         color: #fff;
-        font-size: 120px;
+        font-size: 140px;
         text-transform: capitalize;
         font-weight: 300;
-        text-shadow:0 0 10px gold, 0 0 20px firebrick, 0 0 40px pink, 0 0 80px red ;			
+        top: 80px;
+        text-shadow:0 0 10px gold, 0 0 20px firebrick, 0 0 40px pink, 0 0 80px red ;
+        			
       }   
-      
-       .about-img{
-       position: absolute;
-       top: 75px;
-       right: 0;
-       height: 100vh;
-       width: 40%;
-       object-fit: cover;
-       opacity: 0.2;
-        }
-
-      .about-info{
+      .about-img{
+        position: absolute;
+        top: 100px;
+        right: 0;
+        height: 100vh;
+        width: 30%;
+        object-fit: cover;
+        opacity: 0.2;
+         }
+ 
+       .about-info{
        color: #fff;
        opacity: 0.6;
        line-height: 50px;
        font-size: 30px;
-          } 
-    .about-section.active, 
-    .experience-section.active,
+          }
+
+     .about-section.active, 
+    #experience.active,
     #skillSec.active,
     #project.active,
     .message-section.active,
@@ -152,7 +161,9 @@
     opacity: 1;
     z-index: 8;
     }
+
 /*EXPERIENCE*/
+
       .h1-section{
          text-decoration:underline;
           text-shadow: 0 0 10px gold, 0 0 20px firebrick, 0 0 40px pink, 0 0 80px red;
@@ -162,7 +173,8 @@
         ol li{
     list-style:none;
     }
-/*SKILL SECTION*/
+
+    /*SKILL SECTION*/
    #skillSec li{
    display:inline-block;
    width:200px;
